# PPDD

./: .directory  .gitignore  .travis.yml  CMakeLists.sublime-workspace  CMakeLists.txt  README.md  Spectrogram.qml  aboutdialog.ui  common.h  configuration.h  display_screen.cpp  display_screen.h  display_screen.ui  doxygen  embedded_screen_manager.cpp  embedded_screen_manager.h  infoviewer.cpp  infoviewer.h  infoviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options_panel.cpp  options_panel.h  options_panel.ui  resources.qrc  screen_manager.cpp  screen_manager.h  screen_manager.ui  sino_viewer.pro  sinoviewer.cpp  sinoviewer.h  sinoviewer.ui  viewmode.cpp  viewmode.h  viewmode.ui
cmake/: commons.cmake  libfreenect2.txt.in  libusb.txt.in  stir.in
docs/: Doxygen.in
html/: ToolManager_8h_source.html  aboutdialog_8h_source.html  analysisnema_8h_source.html  annotated.html  bar__screen_8h_source.html  barscreenhistogram_8h_source.html  barscreenwl_8h_source.html  canvaspicker_8h_source.html  classAboutDialog-members.html  classAboutDialog.html  classAnalysisNema-members.html  classAnalysisNema.html  classBarScreen-members.html  classBarScreen.html  classBarScreenHistogram-members.html  classBarScreenHistogram.html  classBarScreenWL-members.html  classBarScreenWL.html  classCanvasPicker-members.html  classCanvasPicker.html  classConfiguration-members.html  classConfiguration.html  classContrastMan-members.html  classContrastMan.html  classCrossPointerTool-members.html  classCrossPointerTool.html  classDialog-members.html  classDialog.html  classEclipseTool-members.html  classEclipseTool.html  classIVIM__toolbox-members.html  classIVIM__toolbox.html  classIntroPage-members.html  classIntroPage.html  classLineTool-members.html  classLineTool.html  classListROIStat-members.html  classListROIStat.html  classMainWindow-members.html  classMainWindow.html  (+110 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+17 more)
latex/: annotated.tex  classAboutDialog.tex  classAnalysisNema.eps  classAnalysisNema.tex  classBarScreen.eps  classBarScreen.tex  classBarScreenHistogram.eps  classBarScreenHistogram.tex  classBarScreenWL.eps  classBarScreenWL.tex  classCanvasPicker.eps  classCanvasPicker.tex  classConfiguration.eps  classConfiguration.tex  classContrastMan.eps  classContrastMan.tex  classCrossPointerTool.eps  classCrossPointerTool.tex  classDialog.eps  classDialog.tex  classEclipseTool.eps  classEclipseTool.tex  classIVIM__toolbox.eps  classIVIM__toolbox.tex  classIntroPage.eps  classIntroPage.tex  classLineTool.eps  classLineTool.tex  classListROIStat.eps  classListROIStat.tex  classMainWindow.tex  classPanelLinePointer.eps  classPanelLinePointer.tex  classPanelRectPointer.eps  classPanelRectPointer.tex  classPointerTool.eps  classPointerTool.tex  classRangesPage.eps  classRangesPage.tex  classRectTool.eps  (+56 more)
src/: CMakeLists.txt
src/buildblock/: CMakeLists.txt  aboutdialog.ui  common.h  configuration.cpp  configuration.h  configuration.ui  dataseries.cpp  dataseries.h  dialog.cpp  dialog.h  dialog.ui
src/display_buildblock/: CMakeLists.txt  bar_screen.cpp  bar_screen.h  barscreenhistogram.cpp  barscreenhistogram.h  barscreenwl.cpp  barscreenwl.h  canvaspicker.cpp  canvaspicker.h  display_screen.cpp  display_screen.h  display_screen.inl  display_screen_container.cpp  display_screen_container.h  display_screen_container.ui  display_screen_curve.cpp  display_screen_curve.h  display_screen_raster.cpp  display_screen_raster.h  listroistat.cpp  listroistat.h  listroistat.ui  screen_manager.cpp  screen_manager.h  screen_manager.inl  screen_manager.ui  screen_manager_imagedata.cpp  screen_manager_imagedata.h  screen_manager_projdata.cpp  screen_manager_projdata.h  screen_manager_projdata.inl
src/tools_buildblock/: CMakeLists.txt  ToolManager.cpp  ToolManager.h  ToolManager.inl  ToolManager.ui  eclipsetool.cpp  eclipsetool.h  ivim_toolbox.cpp  ivim_toolbox.h  ivim_toolbox.ui  linetool.cpp  linetool.h  pointercrosstool.cpp  pointercrosstool.h  pointertool.cpp  pointertool.h  recttool.cpp  recttool.h  tool.cpp  tool.h  worker.cpp  worker.h  worker_math.cpp  worker_math.h  worker_splitter.cpp  worker_splitter.h  worker_thresholder.cpp  worker_thresholder.h  workermanager.cpp  workermanager.h  workermanager.ui
src/ui_buildblock/: CMakeLists.txt  analysisnema.cpp  analysisnema.h  analysisnema.ui  contrastman.cpp  contrastman.h  contrastman.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathman.cpp  mathman.h  mathman.ui  myqlistwidgetitem.cpp  myqlistwidgetitem.h  panel_cross_pointer.cpp  panel_cross_pointer.h  panel_cross_pointer.ui  panelellpointer.cpp  panelellpointer.h  panelellpointer.ui  panellinepointer.cpp  panellinepointer.h  panellinepointer.ui  panelrectpointer.cpp  panelrectpointer.h  panelrectpointer.ui  progressBar.qml  thresholdman.cpp  thresholdman.h  thresholdman.ui
test_files/: generate_box_1.par  generate_box_2.par  generate_box_3.par  test_box_1.ahv  test_box_1.hv  test_box_1.v  test_box_2.ahv  test_box_2.hv  test_box_2.v
test_files/ivim_test/: generate_box_1.par  test_ivim_1.ahv  test_ivim_1.hv  test_ivim_1.v  test_ivim_10.ahv  test_ivim_10.hv  test_ivim_10.v  test_ivim_2.ahv  test_ivim_2.hv  test_ivim_2.v  test_ivim_3.ahv  test_ivim_3.hv  test_ivim_3.v  test_ivim_4.ahv  test_ivim_4.hv  test_ivim_4.v  test_ivim_5.ahv  test_ivim_5.hv  test_ivim_5.v  test_ivim_6.ahv  test_ivim_6.hv  test_ivim_6.v  test_ivim_7.ahv  test_ivim_7.hv  test_ivim_7.v  test_ivim_8.ahv  test_ivim_8.hv  test_ivim_8.v  test_ivim_9.ahv  test_ivim_9.hv  test_ivim_9.v
